--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "4.11.3",
     "@material-ui/pickers": "^3.3.10",
+    "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
