--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "cypress": "^9.6.1",
     "date-fns": "^2.22.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,7 +29,8 @@
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "report": "cypress run reporter"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +51,12 @@
     ]
   },
   "devDependencies": {
+    "cypress-multi-reporters": "^1.6.0",
+    "mocha": "^10.0.0",
+    "mocha-junit-reporter": "^2.0.2",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.1",
+    "mochawesome-report-generator": "^6.2.0",
     "prettier": "^2.3.2"
   }
 }
